# pngp-vis-rays

./: AGENT.md  CMakeLists.txt  design_report.md  pngp.vis.rays.cpp  pngp.vis.rays.filter.ixx  pngp.vis.rays.ixx  pngp.vis.rays.playback.ixx  pngp.vis.rays.record.ixx  pngp.vis.rays.record_v2.ixx  record_schema.md  record_schema_v2.md  roadmap.md
.github/workflows/: windows-build.yml
ray_generator/: CMakeLists.txt
ray_generator/include/: ray_generator.h  record_schema.h  record_schema_v2.h
ray_generator/src/: main.cpp  main_v2.cpp  ray_generator.cu  record_validate_v2.cpp
ray_generator/tests/: record_schema_v2_layout.cpp
shaders/: ground_grid.slang  ray_lines.slang  ray_lines_v2.slang  sample_points_v2.slang
shaders/compute/: ray_filter.slang  ray_filter_v2.slang  ray_indirect.slang  sample_filter_v2.slang  sample_indirect.slang
